--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,16 @@
 body {
-    color: brown;
+    color: black;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+}
+h1 {
+    font-size: 35px;
+}
+.container {
+    background-color: gainsboro;
+    width: 70%;
+    height: 400px;
+    text-align: center;
+    justify-content: center;
+    border: 1px solid #000;
 }
