--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,16 +1,36 @@
 body {
-    color: black;
+    color: #333;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+    
 }
-h1 {
-    font-size: 35px;
+
+#cabecera {
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
 }
-.container {
-    background-color: gainsboro;
+#cabecera #tagline {
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8 em;
+}
+#container {
     width: 70%;
-    height: 400px;
-    text-align: center;
-    justify-content: center;
-    border: 1px solid #000;
+    padding: 0;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+#container h1 {
+    font-size: 20px;
+}
+#post {
+    padding: 1em
 }
